<resources>
    <string name="app_name">Ayyathunai</string>
    <string name="aiht">admin_login</string>
    <string name="clg">ANAND INSTITUTE OF HIGHER TECHNOLOGY</string>
    <string name="student_login">student_login</string>
    <string name="staff_login">staff_login</string>
    <string name="reg_no">reg_no</string>
    <string name="DOB">DOB</string>
    <string name="login">login</string>
    <string name="cancel">Cancel</string>
    <string name="start">start</string>
    <string name="login_id">login_id</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="stud">student detail</string>
    <string name="staff">staff detail</string>
    <string name="admin">Administrator</string>
    <string name="about">about</string>
    <string name="mark">mark</string>
    <string name="welcome">welcome</string>
    <string name="insert">insert</string>
    <string name="modify">modify</string>
    <string name="view">view</string>
    <string name="dept">dept</string>
    <string name="sub_code">sub_code</string>
    <string name="attendance">attendance</string>
    <string name="remove">remove</string>
    <string name="submit">submit</string>
    <string name="Switch">updated</string>
    <string name="rate">rate</string>
    <string name="hi">AIHT</string>
</resources>
