<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout android:background="@drawable/cm11" tools:context=".aiht1" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toEndOf="@+id/button1"
            android:layout_toRightOf="@+id/button1"
            android:ems="10"
            android:inputType="text|number"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="text|number"
            tools:ignore="TextFields" />

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/name" android:layout_alignRight="@+id/textView2" android:layout_above="@+id/et2"
        android:layout_alignEnd="@+id/textView2" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content"  android:textSize="10pt" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/password" android:layout_above="@+id/button1" android:layout_marginBottom="59dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="15dp" android:id="@+id/textView1" android:text="@string/login_id" android:layout_above="@+id/et4" android:layout_marginBottom="35dp" android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_alignParentStart="true" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/dept" android:layout_above="@+id/et4" android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" android:textSize="10pt"/>

        <EditText
            android:id="@+id/et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="text"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et2"
            android:ems="10"
            android:inputType="text"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@+id/button5"
            android:layout_toStartOf="@+id/button5"
            android:text="@string/remove" android:textSize="10pt"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button1" android:text="@string/insert" android:layout_above="@+id/button3" android:layout_marginBottom="34dp" android:layout_toLeftOf="@+id/et4"
        android:layout_toStartOf="@+id/et4" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_toRightOf="@+id/textView3" android:layout_marginLeft="20dp" android:id="@+id/textView5" android:text="@string/staff" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="20dp" android:textSize="18pt"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignTop="@+id/button5"
            android:text="@string/modify" android:textSize="10pt"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="86dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/view" android:textSize="10pt"/>

</RelativeLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>