<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout android:background="@drawable/cm22" tools:context=".aiht2" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#ffffff" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/stud" android:layout_marginTop="20dp" android:layout_marginLeft="65dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/textView1"
        android:layout_marginStart="65dp"
        android:layout_alignParentStart="true" android:textSize="18pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#ffffff" android:text="@string/name" android:layout_marginTop="17dp" android:layout_marginLeft="22dp" android:layout_alignParentLeft="true" android:id="@+id/textView2" android:layout_below="@+id/textView1"
        android:layout_marginStart="22dp"
        android:layout_alignParentStart="true" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#ffffff" android:text="@string/dept" android:layout_marginTop="22dp" android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#ffffff" android:text="@string/reg_no" android:layout_marginTop="31dp" android:id="@+id/textView4" android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#ffffff" android:text="@string/DOB" android:layout_marginTop="29dp" android:id="@+id/textView5" android:layout_below="@+id/textView4" android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" android:textSize="10pt"/>

    <EditText android:background="#ffffff" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et2" android:ems="10" android:layout_alignTop="@+id/textView2" android:layout_alignParentRight="true"
        tools:ignore="TextFields"
        android:layout_alignParentEnd="true" />

    <EditText android:background="#ffffff" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et4" android:layout_alignLeft="@+id/et2" android:ems="10" android:layout_alignTop="@+id/textView3"
        tools:ignore="TextFields"
        android:layout_alignStart="@+id/et2"> </EditText>

    <EditText android:background="#ffffff" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et" android:layout_alignLeft="@+id/et4" android:ems="10" android:layout_alignTop="@+id/textView4"
        tools:ignore="TextFields"
        android:layout_alignStart="@+id/et4" />

    <EditText android:background="#ffffff" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et3" android:layout_alignLeft="@+id/et" android:ems="10" android:layout_alignTop="@+id/textView5"
        tools:ignore="TextFields"
        android:layout_alignStart="@+id/et" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/view"
        android:textColor="#ffffff" android:textSize="10pt"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@+id/button1"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/modify"
            android:textColor="#ffffff"
            android:textSize="10pt" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@+id/button4"
            android:layout_toStartOf="@+id/button4"
            android:text="@string/remove"
            android:textColor="#ffffff"
            android:textSize="10pt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/et3"
        android:layout_marginTop="64dp"
        android:text="@string/insert"
        android:textColor="#ffffff" android:textSize="10pt"/>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>