<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout android:background="@drawable/cm10" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button android:layout_height="wrap_content" android:textSize="10pt"    android:layout_width="wrap_content" android:text="@string/about" android:layout_marginTop="91dp" android:layout_centerHorizontal="true" android:layout_below="@+id/textView1" android:id="@+id/button1"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/reg_no" android:layout_marginTop="37dp" android:layout_below="@+id/textView1" android:id="@+id/textView2" android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" android:textSize="10pt"/>


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et1" android:inputType="number" android:ems="10" android:layout_alignParentRight="true" android:layout_alignBottom="@+id/textView2" android:layout_alignBaseline="@+id/textView2"
        android:layout_alignParentEnd="true">

    <requestFocus/>

</EditText>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/mark" android:id="@+id/button2" android:layout_alignBottom="@+id/button1" android:layout_alignBaseline="@+id/button1" android:layout_toRightOf="@+id/button1" android:layout_marginLeft="30dp"
        android:layout_toEndOf="@+id/button1"
        android:layout_marginStart="30dp" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/welcome" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:textSize="18pt"/>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>