<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/cm3" tools:context="com.example.user.ayyathunai.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/aiht"
            android:textColor="#0800ff" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/clg"
            android:textSize="15pt" android:textColor="#f8f0ff"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:layout_toLeftOf="@+id/button3"
            android:layout_toStartOf="@+id/button3"
            android:text="@string/student_login"
            android:textColor="#0800ff"
            android:textSize="10pt" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:text="@string/staff_login"
            android:textColor="#0800ff"
            android:textSize="10pt" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:text="@string/rate"
            android:textColor="#0800ff"
            android:textSize="10pt" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>