<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <RelativeLayout tools:context=".aiht" android:background="@drawable/cm14" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/aiht" android:layout_marginTop="15dp" android:layout_marginLeft="74dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/textView1"
        android:layout_marginStart="74dp"
        android:layout_alignParentStart="true" android:textSize="15pt"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="42dp"
        android:text="@string/login_id" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/password" android:layout_marginTop="25dp" android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" android:textSize="10pt"/>


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="34dp" android:id="@+id/et2" android:ems="10" android:layout_toRightOf="@+id/textView3" android:layout_alignBottom="@+id/textView2" android:layout_alignBaseline="@+id/textView2"
        android:layout_marginStart="34dp"
        tools:ignore="TextFields"
        android:layout_toEndOf="@+id/textView3">

    </EditText>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et4" android:layout_alignLeft="@+id/et2" android:ems="10" android:inputType="textPassword" android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/et2" />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login" android:id="@+id/button1" android:layout_toRightOf="@+id/textView2" android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView2" android:textSize="10pt" />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cancel" android:layout_marginLeft="39dp" android:id="@+id/button2" android:layout_toRightOf="@+id/button1" android:layout_alignBottom="@+id/button1"
        android:layout_marginStart="39dp"
        android:layout_toEndOf="@+id/button1" android:textSize="10pt"/>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>