<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:background="@drawable/cm14" tools:context=".student" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
        tools:ignore="UselessParent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/student_login" android:layout_marginTop="19dp" android:layout_marginLeft="68dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/textView1"
        android:layout_marginStart="68dp"
        android:layout_alignParentStart="true" android:textSize="15pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/reg_no" android:layout_marginTop="42dp" android:layout_marginLeft="28dp" android:layout_alignParentLeft="true" android:id="@+id/textView2" android:layout_below="@+id/textView1"
        android:layout_marginStart="28dp"
        android:layout_alignParentStart="true" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/DOB" android:layout_marginTop="46dp" android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" android:textSize="10pt"/>


        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="number|numberSigned|numberPassword|datetime|date">

        </EditText>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login" android:layout_marginTop="62dp" android:id="@+id/button3" android:layout_below="@+id/textView3"  android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" android:textSize="10pt"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cancel" android:layout_marginLeft="42dp" android:id="@+id/button4" android:layout_alignBottom="@+id/button3"  android:layout_toRightOf="@+id/button3" android:layout_alignBaseline="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:layout_marginStart="42dp" android:textSize="10pt"/>

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_alignLeft="@+id/et1"
            android:layout_alignStart="@+id/et1"
            android:ems="100"
            android:inputType="number" />

</RelativeLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>