<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:background="@drawable/cm14" tools:context=".staff" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
        tools:ignore="UselessParent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/staff_login" android:layout_marginTop="26dp" android:layout_marginLeft="84dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/textView1"
        android:layout_marginStart="84dp"
        android:layout_alignParentStart="true" android:textSize="15pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login_id" android:layout_marginTop="44dp" android:layout_marginLeft="33dp" android:layout_alignParentLeft="true" android:id="@+id/textView2" android:layout_below="@+id/textView1"
        android:layout_marginStart="33dp"
        android:layout_alignParentStart="true" android:textSize="10pt"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/password" android:layout_marginTop="54dp" android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" android:textSize="10pt"/>


        <EditText
            android:id="@+id/et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            tools:ignore="TextFields">

            <requestFocus />

        </EditText>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et3" android:ems="10" android:inputType="textPassword" android:layout_toRightOf="@+id/textView3" android:layout_alignRight="@+id/et" android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignEnd="@+id/et" />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login" android:layout_marginTop="54dp" android:layout_marginLeft="18dp" android:id="@+id/button5" android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3" android:onClick="start"
        android:layout_marginStart="18dp"
        android:layout_alignStart="@+id/textView3" android:textSize="10pt"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cancel" android:layout_marginLeft="36dp" android:id="@+id/button6" android:layout_toRightOf="@+id/button5" android:layout_alignBottom="@+id/button5" android:onClick="start" android:layout_alignBaseline="@+id/button5"
        android:layout_marginStart="36dp"
        android:layout_toEndOf="@+id/button5" android:textSize="10pt"/>

</RelativeLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>